methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:4: error: not found: value getColorSol
    if(!estFaceMur() && getColorSol()==Color.green)
                        ^