methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var bool = false
  	if(!estFaceMur() && getColorSol()==Color.green)
  		{
        bool = true
      }
  return bool
}